# sambot-parser

./: .gitignore  Cargo.toml  SECURITY.md  justfile
.github/: CONTRIBUTING.md
.github/workflows/: clippy.yml  rust_test.yml
src/: README.md  defang.rs  lib.rs  main.rs  test.rs
tests/: email.txt  sms.txt
