[package]
name = "sambot-parser"
version = "0.1.3"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
ioc_extract = { version = "0.4.5", git = "https://github.com/yaleman/ioc_extract-rs.git", branch = "master" }
# ioc_extract = { version = "0.4.5", path = "../ioc_extract-rs" }
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
