[package]
name = "sambot-parser"
version = "0.1.4"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
ioc_extract = { version = "0.4.5", git = "https://github.com/yaleman/ioc_extract-rs.git", rev = "b5f085d2856568b975db863d7a585f1f23a650a2" }
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
